--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ wasm-bindgen = "0.2.87"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
+js-sys = "0.3.64"
