--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,7 @@ wasm-bindgen = "0.2.87"
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
 js-sys = "0.3.64"
+web-sys = { version = "0.3.64", features = ["console"] }
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.37"
