--- a/www/package.json
+++ b/www/package.json
@@ -4,10 +4,9 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "npm run build-wasm && vite --host",
+		"dev": "vite --host",
 		"build": "tsc && vite build",
-		"preview": "vite preview --host",
-		"build-wasm": "cd .. && wasm-pack build"
+		"preview": "vite preview --host"
 	},
 	"devDependencies": {
 		"typescript": "^4.9.3",
