--- a/www/package.json
+++ b/www/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --host",
-		"build": "tsc && vite build",
+		"build": "tsc && vite build --base /game-of-life/",
 		"preview": "vite preview --host"
 	},
 	"devDependencies": {
